# lestudio-app

./: .eslintrc.cjs  .prettierrc.cjs  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.cjs  tsconfig.json  vite.config.tauri.ts  vite.config.ts
.github/workflows/: ci.yml  publish.yml  update-node-dependencies.yml  update-rust-packages.yml
src/: App.tsx  index.html  index.tsx  tauri.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  filepath.rs  lib.rs  main.rs  music.rs  music_other.rs  process_list.rs
src/components/atoms/: Button.tsx  Input.tsx
src/components/layout/: AppLayout.tsx
src/components/modules/app/context/: AppContext.tsx
src/components/modules/captions/context/: CaptionsContext.tsx
src/components/modules/captions/utils/: langOptions.tsx
src/lang/: en.ts  useI18n.ts
src/pages/: index.tsx
src/pages/captions/: index.tsx
src/pages/game/: index.tsx
src/pages/home/: index.tsx
src/pages/music/: index.tsx
src/pages/settings/: index.tsx
src/scss/: icons.scss  index.scss
src/services/: env.ts  form.ts  useSocket.ts
src/services/api/: fetchGameResults.ts  fetcher.ts  useGetGame.ts  useValidToken.ts
